# SPDX-License-Identifier: LGPL-2.1-or-later

#if 0 /// elogind does not ship a standalone program, but uses its functionality directly
# executables += [
#         libexec_template + {
#                 'name' : 'systemd-update-utmp',
#                 'conditions' : ['ENABLE_UTMP'],
#                 'sources' : files('update-utmp.c'),
#                 'dependencies' : libaudit,
#         },
# ]
#
#else // 0
update_utmp_files = files(
        'update-utmp.c'
)
#endif // 0
